--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,13 @@ main {
 	-ms-flex-direction: column;
 	flex-direction: column;
 }
+.about-us-img {
+	width: 50%;
+	max-width: 445px;
+}
+.about-us-img img {
+	width: 100%;
+}
 .about-us h2 {
 	text-align: center;
 	margin-top: 65px;
@@ -140,7 +147,7 @@ main {
 	display: flex;
 	margin-top: 40px;
 	margin-bottom: 21px;
-	max-width: 1036px;
+	width: 75%;
 }
 
 .about-us-text {
@@ -148,6 +155,7 @@ main {
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 30px;
+	width: 50%;
 }
 .about-us-text p:first-child {
 	margin-bottom: 30px;
