--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 	margin: 0;
 	color: #533738;
 	width: 100%;
+	min-width: 320px;
 	font-size: calc(14px + 5 * ((100vw - 320px) / (1400 - 320)));
 }
 h1 {
@@ -80,16 +81,16 @@ a {
 	margin-left: 2vw;
 	margin-top: 36px;
 }
-.comfort {
+.header-content {
 	margin-top: 90px;
 	margin-left: 13.5vw;
 	max-width: 534px;
 }
-.comfort h1 {
+.header-content h1 {
 	font-weight: 400;
 	line-height: 62px;
 }
-.comfort p {
+.header-content p {
 	max-width: 493px;
 	margin-top: 20px;
 	line-height: 30px;
@@ -153,6 +154,7 @@ main {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	flex-wrap: wrap;
 	margin-top: 40px;
 	margin-bottom: 21px;
 	width: 75%;
@@ -163,6 +165,7 @@ main {
 	font-weight: 400;
 	line-height: 30px;
 	width: 50%;
+	min-width: 320px;
 }
 .about-us-text p:first-child {
 	margin-bottom: 30px;
@@ -176,6 +179,9 @@ main {
 	font-weight: normal;
 	line-height: 62px;
 	font-style: normal;
+}
+.about-us-img {
+	min-width: 320px;
 }
 .footer-about-us ul {
 	display: -webkit-box;
