--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,81 @@ a {
 	margin: 36px 10px;
 }
 
+/* бургер меню */
+#menu__toggle {
+	opacity: 0;
+}
+.menu__btn {
+	display: flex;
+	align-items: center;
+	position: fixed;
+	top: 20px;
+	left: 20px;
+	width: 26px;
+	height: 26px;
+	cursor: pointer;
+	z-index: 1;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 3px;
+	background-color: #533738;
+}
+.menu__btn > span::before {
+	content: "";
+	top: -8px;
+}
+.menu__btn > span::after {
+	content: "";
+	top: 8px;
+}
+.menu__box {
+	display: block;
+	position: fixed;
+	visibility: hidden;
+	top: 0;
+	left: -100%;
+	width: 300px;
+	height: 100%;
+	margin: 0;
+	padding: 80px 0;
+	list-style: none;
+	text-align: center;
+	background-color: #eceff1;
+	box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+}
+.menu__item {
+	display: block;
+	padding: 12px 24px;
+	color: #333;
+	font-family: "Montserrat", sans-serif;
+	font-size: 20px;
+	font-weight: 600;
+	text-decoration: none;
+}
+.menu__item:hover {
+	background-color: #cfd8dc;
+}
+#menu__toggle:checked ~ .menu__btn > span {
+	transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+	top: 0;
+	transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+	top: 0;
+	transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+	visibility: visible;
+	left: 0;
+}
+
 .phone {
 	margin-right: auto;
 	margin-left: 2vw;
@@ -110,9 +185,7 @@ a {
 	line-height: 24px;
 	font-size: calc(16px + 5 * ((100vw - 320px) / (1400 - 320)));
 }
-.comfort button:hover {
-	cursor: pointer;
-}
+
 h2 {
 	font-weight: normal;
 	line-height: 50px;
@@ -141,7 +214,7 @@ main {
 }
 .about-us-img {
 	width: 50%;
-	max-width: 445px;
+	min-width: 250px;
 }
 .about-us-img img {
 	width: 100%;
@@ -154,6 +227,7 @@ main {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	justify-content: space-between;
 	flex-wrap: wrap;
 	margin-top: 40px;
 	margin-bottom: 21px;
@@ -161,11 +235,11 @@ main {
 }
 
 .about-us-text {
-	margin-left: 4.8vw;
+	margin-left: 0;
 	font-weight: 400;
 	line-height: 30px;
-	width: 50%;
-	min-width: 320px;
+	width: 45%;
+	min-width: 250px;
 }
 .about-us-text p:first-child {
 	margin-bottom: 30px;
@@ -174,15 +248,16 @@ main {
 	background-color: #8d7370;
 	color: #ffffff;
 	align-self: stretch;
+	display: flex;
+	justify-content: center;
 }
 .footer-about-us h1 {
 	font-weight: normal;
 	line-height: 62px;
 	font-style: normal;
+	font-size: 50px;
 }
-.about-us-img {
-	min-width: 320px;
-}
+
 .footer-about-us ul {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -190,14 +265,15 @@ main {
 	list-style: none;
 	-webkit-box-pack: justify;
 	-ms-flex-pack: justify;
-	justify-content: space-between;
+	justify-content: space-around;
 	margin-left: 13vw;
 	margin-right: 13vw;
 	flex-wrap: wrap;
+	width: 100%;
 }
 .footer-about-us span {
 	font-weight: 500;
-	font-size: calc(15px + 16 * ((100vw - 320px) / (1400 - 320)));
+	font-size: 30px;
 	line-height: 37px;
 	text-transform: uppercase;
 }
@@ -220,23 +296,15 @@ main {
 	grid-column: 1 / 5;
 }
 .work-photo {
-	display: -ms-grid;
-	display: grid;
-	grid-column: 5fr 2fr 5fr;
-	grid-row: 1fr 1fr;
-	justify-items: center;
-	align-items: center;
+	display: flex;
+	min-width: 320px;
+	flex-wrap: wrap;
 	justify-content: center;
-	align-content: center;
-	grid-gap: 30px 20px;
-	-webkit-box-pack: start;
-	-ms-flex-pack: start;
-	justify-content: start;
-	text-align: center;
 }
 .photo {
 	background-size: cover;
 	color: #ffffff;
+	margin: 10px;
 }
 .photo div {
 	margin-top: 0;
@@ -245,56 +313,48 @@ main {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
 	max-width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 .photo div:hover {
 	opacity: 1;
 }
+
 .photo p:first-child {
 	font-weight: 500;
-	font-size: 30px;
 	line-height: 36.57px;
-	margin: 0 109px 0;
-	padding-top: 86px;
+	margin: 0 10% 0;
+	padding-top: 1em;
+	font-size: calc(16px + 14 * ((100vw - 320px) / (1400 - 320)));
 }
 .photo p:last-child {
-	line-height: 30px;
+	line-height: 1em;
 	text-align: left;
-	margin-top: 20px;
-	margin-left: 35px;
-	margin-right: 35px;
+	margin-top: 5%;
+	margin-left: 5%;
+	margin-right: 5%;
+	font-size: calc(14px + 4 * ((100vw - 320px) / (1400 - 320)));
 }
 .work-photo img {
 	display: block;
-	width: 100%;
 	max-width: 100%;
 }
 .work-photo .photo1 {
-	-ms-grid-row: 2;
-	grid-row: 2;
-	grid-column: 1/2;
 	max-width: 488px;
 	position: relative;
 }
 .work-photo .photo2 {
-	-ms-grid-row: 2;
-	grid-row: 2;
-	grid-column: 2/4;
 	max-width: 692px;
 	position: relative;
 }
 .work-photo .photo3 {
-	-ms-grid-row: 3;
-	grid-row: 3;
-	grid-column: 1/3;
 	max-width: 692px;
 	position: relative;
 }
 .work-photo .photo4 {
-	-ms-grid-row: 3;
-	grid-row: 3;
-	grid-column: 3/4;
 	max-width: 488px;
 	position: relative;
 }
@@ -305,6 +365,12 @@ main {
 	font-size: 30px;
 	line-height: 37px;
 	margin-bottom: 65px;
+}
+.our-work p a {
+	font-size: calc(20px + 10 * ((100vw - 320px) / (1400 - 320)));
+}
+.our-work p a img {
+	width: 21%;
 }
 .comand {
 	background-color: #e2c4ba;
@@ -325,14 +391,16 @@ main {
 }
 .comand-photo figure {
 	max-width: 320px;
+	min-width: 250px;
 }
 .comand-photo figure img {
 	width: 100%;
 }
 
-.comand-photo figure:nth-child(2) {
+.comand-photo figure {
 	margin-left: 38px;
 	margin-right: 38px;
+	margin-top: 10px;
 }
 .comand-photo figcaption {
 	line-height: 30px;
@@ -368,6 +436,7 @@ main {
 	width: 70px;
 	height: 70px;
 	margin-bottom: 20px;
+	margin-top: 20px;
 }
 .how-work p {
 	max-width: 285px;
@@ -433,12 +502,15 @@ main {
 .arrow {
 	display: block;
 	width: 72px;
+	min-width: 36px;
 	height: 72px;
+	min-height: 36px;
 	background-color: #cc8b86;
 	border-radius: 50%;
 	text-align: center;
 	line-height: 76px;
 	margin: 29px;
+	border: 1px solid black;
 }
 .arrow img {
 	display: inline-block;
@@ -486,11 +558,13 @@ main {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	justify-content: center;
 	box-sizing: border-box;
-	padding-left: 13.3vw;
-	padding-right: 7vw;
+	padding-left: 5em;
+	padding-right: 5em;
 	width: 100%;
 	flex-wrap: wrap;
+	min-height: 624px;
 }
 .request h2 {
 	color: #ffffff;
@@ -501,7 +575,8 @@ main {
 	text-transform: uppercase;
 }
 .request form {
-	width: 50%;
+	min-width: 300px;
+	max-width: 50%;
 }
 .request p {
 	color: #ffffff;
@@ -540,9 +615,12 @@ main {
 }
 .request form button {
 	margin-top: 31px;
+	margin-bottom: 30px;
 }
 .map {
-	width: 50%;
+	flex-grow: 1;
+	min-width: 300px;
+	min-height: 300px;
 }
 
 .map iframe {
@@ -553,10 +631,12 @@ footer {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	flex-wrap: wrap;
 	background-color: #efe6e4;
 	box-sizing: border-box;
 	padding: 37px 7.2vw;
 	line-height: 30px;
+	font-size: calc(10px + 8 * ((100vw - 320px) / (1400 - 320)));
 }
 footer p:last-child {
 	margin-left: auto;
